k8s/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: hotel-booking
  labels:
    app: prometheus

spec:
  replicas: 1

  selector:
    matchLabels:
      app: prometheus

  template:
    metadata:
      labels:
        app: prometheus

    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.54.1
          imagePullPolicy: IfNotPresent

          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus"

          ports:
            - containerPort: 9090
              name: web

          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus

            - name: prometheus-storage
              mountPath: /prometheus

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config

        - name: prometheus-storage
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: hotel-booking

spec:
  selector:
    app: prometheus

  ports:
    - name: web
      port: 9090
      targetPort: 9090

  type: ClusterIP
